--- a/testing/deployment.yaml
+++ b/testing/deployment.yaml
@@ -93,7 +93,7 @@ spec:
             name: aks-helloworld-two
             port:
               number: 80
-      - path: /(.*)
+      - path: /ciao(.*)
         pathType: Prefix
         backend:
           service:
