--- a/testing/deployment.yaml
+++ b/testing/deployment.yaml
@@ -32,40 +32,6 @@ spec:
   selector:
     app: aks-helloworld-one
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: aks-helloworld-two  
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: aks-helloworld-two
-  template:
-    metadata:
-      labels:
-        app: aks-helloworld-two
-    spec:
-      containers:
-      - name: aks-helloworld-two
-        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
-        ports:
-        - containerPort: 80
-        env:
-        - name: TITLE
-          value: "AKS Ingress Demo"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: aks-helloworld-two  
-spec:
-  type: ClusterIP
-  ports:
-  - port: 80
-  selector:
-    app: aks-helloworld-two
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -75,48 +41,22 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod-issuer"
+spec:
+  tls:
+    - hosts:
+        - devapi.runtimemachines.com
+      secretName: devapi-tls-secret
+  rules:
+    - host: adevapi.runtimemachines.com
 spec:
   rules:
   - http:
       paths:
-      - path: /hello-world-one(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: aks-helloworld-one
-            port:
-              number: 80
-      - path: /hello-world-two(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: aks-helloworld-two
-            port:
-              number: 80
       - path: /(.*)
         pathType: Prefix
         backend:
           service:
             name: aks-helloworld-one
             port:
-              number: 80
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: hello-world-ingress-static
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
-    kubernetes.io/ingress.class: "nginx"
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /static(/|$)(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: aks-helloworld-one
-            port: 
               number: 80
