--- a/testing/deployment.yaml
+++ b/testing/deployment.yaml
@@ -1,7 +1,8 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: aks-helloworld-one  
+  name: aks-helloworld-one
 spec:
   replicas: 1
   selector:
@@ -13,24 +14,26 @@ spec:
         app: aks-helloworld-one
     spec:
       containers:
-      - name: aks-helloworld-one
-        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
-        ports:
-        - containerPort: 80
-        env:
-        - name: TITLE
-          value: "Welcome to Azure Kubernetes Service (AKS)"
+        - name: aks-helloworld-one
+          image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
+          ports:
+            - containerPort: 80
+          env:
+            - name: TITLE
+              value: Welcome to Azure Kubernetes Service (AKS)
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: aks-helloworld-one  
+  name: aks-helloworld-one
 spec:
   type: ClusterIP
   ports:
-  - port: 80
+    - port: 80
   selector:
     app: aks-helloworld-one
+
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -40,8 +43,8 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-    kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod-issuer"
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
 spec:
   tls:
     - hosts:
@@ -51,10 +54,10 @@ spec:
     - host: adevapi.runtimemachines.com
       http:
         paths:
-        - path: /(.*)
-          pathType: Prefix
-          backend:
-            service:
-              name: aks-helloworld-one
-              port:
-                number: 80
+          - path: /(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: aks-helloworld-one
+                port:
+                  number: 80
