--- a/testing/deployment.yaml
+++ b/testing/deployment.yaml
@@ -46,13 +46,8 @@ metadata:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
 spec:
-  tls:
-    - hosts:
-        - devapi.runtimemachines.com
-      secretName: devapi-tls-secret
   rules:
-    - host: devapi.runtimemachines.com
-      http:
+    - http:
         paths:
           - path: /(.*)
             pathType: Prefix
